--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.h2.console.enabled=true
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-server.servlet.context-path=/alkemymvc
+#server.servlet.context-path=/alkemymvc
