--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.tagdb.driver-class-name= com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 
